--- a/src/components/Thread/Thread.css
+++ b/src/components/Thread/Thread.css
@@ -1,7 +1,7 @@
 .thread {
     background-color: var(--color-bg);
     display: flex;
-    flex: 0.65;
+    flex: 1;
     flex-direction: column;
     height: 100%;
 }
